<resources>
    <string name="app_name">My Application</string>
    <string name="title">Title...</string>
    <string name="text">Text...</string>
    <string name="date">Date...</string>
    <string name="sign_up">Sign up</string>
    <string name="email">Email...</string>
    <string name="password">Password ...</string>
    <string name="confirm_password">Confirm password ...</string>
    <string name="create_account">Create account</string>
    <string name="login">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>