<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAccountActivity"
    android:layout_marginVertical="16dp"
    android:layout_marginHorizontal="32dp"
    >

    <ImageView
        android:id="@+id/signUp_icon"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/icon_signup"/>

    <TextView
        android:id="@+id/text_SignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signUp_icon"
        android:text="@string/sign_up"
        android:textAlignment="center"
        style="@style/TEXT"
        android:textSize="32sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"/>


    <LinearLayout
        android:id="@+id/form_CreateAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_SignUp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/email_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:background="@drawable/rounded_corner"
            style="@style/TEXT"
            android:textSize="20sp"
            android:padding="16dp"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/password_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            style="@style/TEXT"
            android:background="@drawable/rounded_corner"
            android:textSize="20sp"
            android:inputType="textPassword"
            android:padding="16dp"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/passwordConfirm_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TEXT"
            android:hint="@string/confirm_password"
            android:background="@drawable/rounded_corner"
            android:textSize="20sp"
            android:inputType="textPassword"
            android:padding="16dp"
            android:layout_marginBottom="16dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/createAccount_button"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            style="@style/BUTTON"
            android:text="@string/create_account"
            android:textSize="16sp"/>

        <ProgressBar
            android:id="@+id/progressBar_AccountCreate"
            android:layout_width="24dp"
            android:layout_height="64dp"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:visibility="gone"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/form_CreateAccount"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TEXT"
            android:text="Already have an account?"/>
        <TextView
            android:id="@+id/login_textViewButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TEXT"
            android:text="Login"
            android:textStyle="bold"
            android:layout_marginLeft="5dp"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/google"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:src="@drawable/google_button"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/container_login"/>
<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_below="@+id/container_login"-->
<!--        android:orientation="horizontal"-->
<!--        android:layout_marginTop="20dp"-->
<!--        android:gravity="center">-->
<!--    <TextView-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="match_parent"-->
<!--        android:text="Continue using "-->
<!--        android:gravity="center"/>-->

<!--        <ImageView-->
<!--            android:id="@+id/google"-->
<!--            android:layout_width="50dp"-->
<!--            android:layout_height="30dp"-->
<!--            android:src="@drawable/google_button"-->
<!--            android:layout_centerHorizontal="true"/>-->
<!--    </LinearLayout>-->

</RelativeLayout>
</ScrollView>