<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    style="@style/SCREEN"
    android:layout_marginVertical="16dp"
    android:layout_marginHorizontal="32dp"
    >

    <ImageView
        android:id="@+id/login_icon"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/icon_login"/>

    <TextView
        android:id="@+id/text_SignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_icon"
        style="@style/TEXT"
        android:text="@string/login"
        android:textAlignment="center"
        android:textSize="32sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"/>

    <LinearLayout
        android:id="@+id/form_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_SignUp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/email_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TEXT"
            android:hint="@string/email"
            android:background="@drawable/rounded_corner"
            android:textSize="20sp"
            android:padding="16dp"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/password_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TEXT"
            android:hint="@string/password"
            android:background="@drawable/rounded_corner"
            android:textSize="20sp"
            android:padding="16dp"
            android:layout_marginBottom="16dp"/>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            style="@style/BUTTON"
            android:layout_height="64dp"
            android:text="@string/login"
            android:textSize="16sp"/>

        <ProgressBar
            android:id="@+id/progressBar_AccountCreate"
            android:layout_width="24dp"
            android:layout_height="64dp"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:visibility="gone"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/form_login"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            style="@style/TEXT"
            android:layout_height="wrap_content"
            android:text="Don't have an account?"/>
        <TextView
            android:id="@+id/register_textViewButton"
            android:layout_width="wrap_content"
            style="@style/TEXT"
            android:layout_height="wrap_content"
            android:text="Register"
            android:textStyle="bold"
            android:layout_marginLeft="5dp"/>
    </LinearLayout>
</RelativeLayout>
</ScrollView>